--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -122,32 +122,32 @@
         }
       
         /* Modal de conclusão */
-        #completion-modal {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            padding: 20px;
-            border: 2px solid #333;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-            text-align: center;
-        }
+       #completion-modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 2px solid #333;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    text-align: center;
+}
 
-        #completion-modal button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
+#completion-modal button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
 
-        #completion-modal button:hover {
-            background-color: #555;
-        }
+#completion-modal button:hover {
+    background-color: #555;
+}
 
         #overlay {
             display: none;
@@ -371,15 +371,15 @@ function displayQuestion() {
     console.log("Image path:", questionImagePath); // Log para depuração
 
     const questionImage = document.createElement("img");
-    questionImage.src = questionImagePath;
-    questionImage.alt = `Image not found for question ${currentQuestionIndex + 1}`;
-    questionImage.onerror = function () {
-        console.error(`Image not found: ${questionImagePath}`);
-        questionImage.src = "../../../imagens/placeholder.png"; // Imagem padrão
-    };
-    questionImage.style.width = "100%";
-    questionImage.style.maxHeight = "300px";
-    questionDiv.appendChild(questionImage);
+questionImage.src = questionImagePath;
+questionImage.alt = `Image not found for question ${currentQuestionIndex + 1}`;
+questionImage.onerror = function () {
+    console.error(`Image not found: ${questionImagePath}`);
+    questionImage.src = "../../../imagens/placeholder.png"; // Imagem padrão
+};
+questionImage.style.width = "100%";
+questionImage.style.maxHeight = "300px";
+questionDiv.appendChild(questionImage);
 
     // Adiciona o texto da questão
     const questionText = document.createElement("p");
@@ -468,10 +468,11 @@ function checkAnswer(selectedAnswer) {
 // Verifica se o quiz foi concluído
 function checkCompletion() {
     const grade = Math.round((correctAnswers / totalQuestions) * 100);
+    console.log("Grade calculated:", grade, "Correct Answers:", correctAnswers, "Total Questions:", totalQuestions);
 
     ensureUserIsAuthenticated((userId) => {
-        saveGrade(userId, grade);
-        updateProgressInDatabase(userId, grade);
+        saveGrade(userId, grade); // Salva a nota
+        updateProgressInDatabase(userId, grade); // Atualiza o progresso
     });
 
     if (grade >= 70) {
@@ -484,6 +485,8 @@ function checkCompletion() {
 // Atualiza o progresso no banco de dados
 async function updateProgressInDatabase(userId, grade) {
     const { level, unit } = getParamsFromURL();
+    console.log("Updating progress for:", { level, unit, grade });
+
     const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
     try {
@@ -504,6 +507,7 @@ async function updateProgressInDatabase(userId, grade) {
             }
         }
     } catch (error) {
+        console.error("Error updating progress:", error);
         handleError("Failed to update progress. Please try again.");
     }
 }
@@ -591,7 +595,12 @@ function generatePDF() {
 
 // Exibição de modais
 function showModal(message) {
+    console.log("Displaying modal with message:", message);
     const modal = document.getElementById("completion-modal");
+    if (!modal) {
+        console.error("Modal element not found!");
+        return;
+    }
     modal.innerHTML = `
         <h2>${message}</h2>
         <p>Your score: ${Math.round((correctAnswers / totalQuestions) * 100)}%</p>
