--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -122,7 +122,7 @@
         }
       
         /* Modal de conclusão */
-       #completion-modal {
+  #completion-modal {
     display: none;
     position: fixed;
     top: 50%;
@@ -134,6 +134,8 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     text-align: center;
+    visibility: visible; /* Adicionado */
+    opacity: 1; /* Adicionado */
 }
 
 #completion-modal button {
