--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -414,13 +414,18 @@ function showNextQuestion() {
         alert("No questions loaded.");
         return;
     }
+
     if (currentQuestionIndex < questions.length - 1) {
+        // Avança para a próxima questão
         currentQuestionIndex++;
         console.log("Next Question Index:", currentQuestionIndex);
         displayQuestion();
-    } else {
+    } else if (allQuestionsAnswered()) {
+        // Última questão e todas respondidas: verifica a conclusão
         console.log("End of phase reached.");
-        checkCompletion(); // Chama a função de conclusão
+        checkCompletion();
+    } else {
+        alert("Please answer all questions before completing the quiz.");
     }
 }
 
@@ -453,6 +458,14 @@ function updateNavigationButtons() {
 function selectAnswer(answer) {
     selectedAnswers[currentQuestionIndex] = answer;
     checkAnswer(answer);
+
+    // Marca a questão como respondida
+    answeredQuestions[currentQuestionIndex] = true;
+
+    // Verifica automaticamente a conclusão se todas as questões foram respondidas
+    if (allQuestionsAnswered() && currentQuestionIndex === questions.length - 1) {
+        checkCompletion();
+    }
 }
 
 function checkAnswer(selectedAnswer) {
@@ -467,10 +480,14 @@ function checkAnswer(selectedAnswer) {
     }
 }
 
+function allQuestionsAnswered() {
+    return answeredQuestions.every((answered) => answered); // Verifica se todas foram respondidas
+}
+
 // Verifica se o quiz foi concluído
 function checkCompletion() {
-    if (totalQuestions === 0) {
-        console.error("No questions available to calculate completion.");
+    if (!allQuestionsAnswered()) {
+        alert("Please answer all questions before completing the quiz.");
         return;
     }
 
