--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -170,7 +170,7 @@
 
 <h1>Hannah Test</h1>
 
-<div id="grade-display" class="grade-style"></div>
+<div id="grade-display" class="grade-style" style="display: none;"></div>
 
 <div class="btn-group">
     <button class="read-btn" id="read-btn" onclick="readQuestion()">Read</button>
@@ -738,8 +738,12 @@ function ensureUserIsAuthenticated(callback) {
     });
 }
 
-// Carregar perguntas ao iniciar
-window.onload = loadQuestions;
+window.onload = () => {
+    ensureUserIsAuthenticated((userId) => {
+        loadGrade(userId); // Carrega a nota do banco de dados
+        loadQuestions();   // Carrega as perguntas do quiz
+    });
+};
 
 </script>
 
