--- a/Atividades/TestQuizLidoABC/index.html
+++ b/Atividades/TestQuizLidoABC/index.html
@@ -727,24 +727,7 @@ function getPhaseFromURL() {
 function ensureUserIsAuthenticated(callback) {
     firebase.auth().onAuthStateChanged((user) => {
         if (user) {
-            const userId = user.uid;
-            // Verificar o role do usuário
-            const roleRef = firebase.database().ref(`usuarios/${userId}/role`);
-            
-            roleRef.once('value')
-                .then((snapshot) => {
-                    const role = snapshot.val();
-                    console.log("User role:", role); // Log para depuração
-                    if (role === 'professor' || role === 'proprietario') {
-                        displayPDFButton(); // Exibe o botão PDF
-                    }
-                    // Chama o callback com o userId
-                    callback(userId);
-                })
-                .catch((error) => {
-                    console.error("Error fetching role:", error);
-                    handleError("An error occurred while verifying your access.");
-                });
+            callback(user.uid);
         } else {
             handleError("You need to be logged in to continue.");
             // Redireciona para a página de login ou recarrega a página
@@ -753,26 +736,6 @@ function ensureUserIsAuthenticated(callback) {
             }, 3000);
         }
     });
-}
-
-function displayPDFButton() {
-    const btnGroup = document.querySelector('.btn-group'); // Encontre o grupo de botões
-    if (!btnGroup) {
-        console.error("Button group not found!");
-        return;
-    }
-
-    // Verifica se o botão já existe
-    if (document.querySelector('.pdf-btn')) {
-        console.log("PDF button already exists.");
-        return;
-    }
-
-    const pdfButton = document.createElement('button'); // Crie o botão dinamicamente
-    pdfButton.className = 'pdf-btn';
-    pdfButton.textContent = 'Generate PDF';
-    pdfButton.onclick = generatePDF; // Conecte à função de gerar PDF
-    btnGroup.appendChild(pdfButton); // Adicione ao DOM
 }
 
 window.onload = () => {
