teste imagem pdf

--- a/Atividades/TestQuizLeVeAB/index.html
+++ b/Atividades/TestQuizLeVeAB/index.html
@@ -640,14 +640,28 @@ function generatePDF() {
 
         let yPosition = 90;
 
-        // Adiciona as perguntas e respostas
+        // Adiciona as perguntas, imagens e respostas
         questions.forEach((q, index) => {
-            doc.setFontSize(14);
-            let questionText = `${index + 1}. ${q.question}`;
-            let textLines = doc.splitTextToSize(questionText, 180);
-            let questionHeight = textLines.length * 10;
+            // Adiciona a imagem da questão
+            const questionImage = new Image();
+            questionImage.src = `../../../../Level1/Unit1/DataTestQuizLeVeAB/images/imagem${index + 1}.png`; // Caminho para as imagens
 
-            // Verifica se a página está cheia e adiciona uma nova página, se necessário
+            questionImage.onload = () => {
+                const imageHeight = (questionImage.height / questionImage.width) * 50; // Proporção para ajustar a largura a 50
+                if (yPosition + imageHeight > 280) {
+                    doc.addPage();
+                    yPosition = 20;
+                }
+                doc.addImage(questionImage, 'PNG', 20, yPosition, 50, imageHeight); // Adiciona a imagem
+                yPosition += imageHeight + 10; // Espaçamento após a imagem
+            };
+
+            // Adiciona o texto da questão
+            doc.setFontSize(14);
+            const questionText = `${index + 1}. ${q.question}`;
+            const textLines = doc.splitTextToSize(questionText, 180);
+            const questionHeight = textLines.length * 10;
+
             if (yPosition + questionHeight > 280) {
                 doc.addPage();
                 yPosition = 20;
@@ -656,11 +670,12 @@ function generatePDF() {
             doc.text(textLines, 20, yPosition);
             yPosition += questionHeight;
 
-            q.answers.forEach(answer => {
+            // Adiciona as opções de resposta
+            q.answers.forEach((answer) => {
                 doc.setFontSize(12);
-                let answerText = answer;
-                let answerLines = doc.splitTextToSize(answerText, 180);
-                let answerHeight = answerLines.length * 10;
+                const answerText = answer;
+                const answerLines = doc.splitTextToSize(answerText, 180);
+                const answerHeight = answerLines.length * 10;
 
                 if (yPosition + answerHeight > 280) {
                     doc.addPage();
@@ -673,6 +688,14 @@ function generatePDF() {
 
             yPosition += 10; // Espaçamento entre perguntas
         });
+
+        // Salva o PDF
+        doc.save('QuizQuestionsWithImages.pdf');
+    };
+
+    // Verifica se o logo já foi carregado
+    if (logo.complete) logo.onload();
+}
 
         // Salva o PDF
         doc.save('QuizQuestionsWithLogo.pdf');
